# autogen-mcp

./: .gitignore  README.md  main.py  pyproject.toml
MCP/: notion_mcp_tools.py
agents/: notion_agent.py
config/: settings.py
config/prompt/: system_prompt.py
models/: openai_model_client.py
teams/: notion_team.py
