[project]
name = "mcp-notion-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autogen-agentchat>=0.7.4",
    "autogen-core>=0.7.4",
    "autogen-ext[mcp]>=0.7.4",
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "openai>=1.109.1",
    "pyngrok>=7.4.0",
    "tiktoken>=0.11.0",
]
